web-infras/parser/tests/fixtures/babel/core/uncategorised/410/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|break 1;
 |     ^
[SyntaxError]: unlabeled break must be inside loop or switch. (1,1)
1|break 1;
 |^
